--- a/invoices/webapp/i18n/i18n.properties
+++ b/invoices/webapp/i18n/i18n.properties
@@ -20,3 +20,13 @@ invoiceListTitle=Invoices List
 invoiceStatusA=New
 invoiceStatusB=In Process
 invoiceStatusC=Done
+
+#Details
+detailsPageTitle=Invoices List
+
+#Product Rating
+productRatingLabelInitial=Please rate this product
+productRatingButton=Rate
+productRatingLabelIndicator=Your Rating: {0} out of {1}
+productRatingLabelFinal=Thank you for your rating!
+ratingConfirmation=You have rated this product with {0} starts
