--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -28,3 +28,6 @@ btnFilter=Filter
 btnClearFilter=Clear Filter
 showCity=Show City
 hideCity=Hide City
+orderId=Order ID
+freight=Freight
+shipAddress=Ship Address
