--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -31,3 +31,7 @@ hideCity=Hide City
 orderId=Order ID
 freight=Freight
 shipAddress=Ship Address
+
+tableShowDetails=Show Details
+orders=Orders
+close=Close
