--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -35,3 +35,9 @@ shipAddress=Ship Address
 tableShowDetails=Show Details
 orders=Orders
 close=Close
+
+employeeId= Employee ID
+titleEmployee=Title
+countryCode=Country
+city=City
+postalCode=Postal Code
