--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -36,6 +36,7 @@ tableShowDetails=Show Details
 orders=Orders
 close=Close
 
+employeeDetails=Employee Details
 employeeId= Employee ID
 titleEmployee=Title
 countryCode=Country
