--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -42,3 +42,17 @@ titleEmployee=Title
 countryCode=Country
 city=City
 postalCode=Postal Code
+
+incidence= Incidence
+europe= Europe
+US= United States
+createIncidence= Create Incidence
+incidenceDate=Date
+incidenceReason=Reason
+incidenceType=Type
+incidenceCorrect=Correct
+incidencePending=Pending
+incidenceError=Error
+today=Today
+tomorrow=Tomorrow
+yesterday=Yesterday
