--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -56,3 +56,12 @@ incidenceError=Error
 today=Today
 tomorrow=Tomorrow
 yesterday=Yesterday
+
+#OData
+odataSaveOK=Incidence Saved
+odataSaveKO=Incidence Not Saved
+odataNoChanges=No changes have been made
+odataDeleteOK=Incidence Deleted
+odataDeleteKO=Incidence Not Deleted
+odataUpdateOK=Incidence Updated
+odataUpdateKO=Incidence Not Updated
