--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -53,9 +53,22 @@ editar=Editar
 documentos=Documentos
 ficheros=Ficheros
 nuevo=Nuevo Empleado
+noCreado=Empleado no creado
 
 #Ver Empleado
 seleccione=Seleccione un empleado
 detalleEmpleado=Detalle Empleado
 deBaja=Dar de baja
 ascender=Ascender
+confirmEliminar=¿Está seguro de eliminar el usuario?
+eliminado=Se ha eliminado el usuario
+noEliminado=El usuario no pudo ser eliminado
+historial=Historial
+
+#Ascenso
+ascenso=Nuevo Ascenso
+aceptar=Aceptar
+salario=Salario
+fecha=Fecha
+ascendido=Se ha realizado el ascenso correctamente
+noAscendido=No se ha podido ascender
